FitLifeProLatest/force-app/main/default/objects/Account/fields/Geographic_Location__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Location__c</fullName>
    <label>Geographic Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>