FitLifeProLatest/force-app/main/default/objects/Account/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <displayFormat>FIT-{000}</displayFormat>
    <label>Member Id</label>
    <type>AutoNumber</type>
</CustomField>