FitLifeProLatest/force-app/main/default/objects/Account/fields/Registration_Details__c.field-meta.xml
<CustomField>
    <fullName>Registration_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Details</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>