FitLifeProLatest/force-app/main/default/objects/Account/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>