FitLifeProLatest/force-app/main/default/objects/Account/validationRules/Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Minimum age is 18</errorMessage>
</ValidationRule>