FitLifeProLatest/force-app/main/default/objects/Account/validationRules/Phone_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(LEN( Phone )&lt;&gt;10 , NOT( ISNUMBER( Phone )))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>