FitLifeProLatest/force-app/main/default/objects/Account/listViews/FitlifeProMember.listView-meta.xml
<ListView>
    <fullName>FitlifeProMember</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/14/2023 12:00 AM</value>
    </filters>
    <label>FitlifeProMember</label>
</ListView>