FitLifeProLatest/force-app/main/default/objects/Account/listViews/India_Members.listView-meta.xml
<ListView>
    <fullName>India_Members</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geographic_Location__c</field>
        <operation>equals</operation>
        <value>India</value>
    </filters>
    <label>India Members</label>
</ListView>