FitLifeProLatest/force-app/main/default/objects/Account/listViews/Membership_Plan.listView-meta.xml
<ListView>
    <fullName>Membership_Plan</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Silver,Platinum,Gold</value>
    </filters>
    <label>Membership Plan</label>
</ListView>